# mosaic

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: standalone.yml
cmake/: CPM.cmake  tools.cmake
documentation/: CMakeLists.txt  conf.py
include/mosaic/: mosaic.h
include/mosiac/: mosiac.h
source/: mosaic.cpp  mosiac.cpp
standalone/: CMakeLists.txt
standalone/source/: CertManager.cpp  CertManager.h  KeyManager.cpp  KeyManager.h  main.cpp
test/: CMakeLists.txt
test/source/: malamute.cpp  mosaic.cpp  mosiac.cpp
